# adk-streaming-guide

./: .gitignore  CLAUDE.md  mkdocs.yml
.claude/agents/: playground.md
.claude/skills/bidi/: SKILL.md
.claude/skills/google-adk/: SKILL.md
.github/workflows/: adk-version-monitor.yml  ci-6662.yml  ci.yml  claude-code-reviewer.yml
docs/: part1.md
src/bidi-demo/: .dockerignore  README.md  pyproject.toml
src/bidi-demo/agent_engine/: .env.template
src/bidi-health/: .dockerignore  Dockerfile  README.md  apps.yaml  apps.yaml.example  pyproject.toml
src/bidi-health/app/: config.py  main.py  probes.py  tts.py
workshops/: workshop.md  workshop_ja.md  workshop_pub.md
workshops/src/: pyproject.toml
